[metadata]
name = respect_validation
author = Alexey Mochalin
author_email = amochalini@gmail.com
url = https://github.com/gurkin33/respect_validation
description = Python version of "the most awesome validation engine for PHP"
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    respect_validation
install_requires =
    chardet
    pycountry
    phonenumbers
python_requires = >=3.7
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    coverage
    tox
    flake8

[options.package_data]
respect_validation = py.typed

[flake8]
max-line-length = 160